--- a/.github/workflows/push_pypi.yml
+++ b/.github/workflows/push_pypi.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   publish-test-pypi:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
 
     steps:
     - name: Checkout
