--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name            = "jiku-data"
-version         = "0.1.3"
+version         = "0.1.4"
 description     = "'Open source datasets, component of Jiku Core"
 readme          = "README.md"
 requires-python = ">=3.9"
@@ -32,7 +32,11 @@ dependencies = [
 ]
 
 
+[tool.setuptools]
+    include-package-data = true
 
+[tool.setuptools.package-data]
+    jiku-data = ["*.csv", "*.npz", "*.h5"]
 
 
 [project.urls]  # Optional
